<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Caco</string>
    <string name="create_account_celular">Celular</string>
    <string name="action_settings">Settings</string>
    <string name="login_entrar">Entrar</string>
    <string name="login_criarconta">Criar Conta</string>
    <string name="login_email">E-mail</string>
    <string name="create_account_login">Login</string>
    <string name="login_senha">Senha</string>
    <string name="create_account_email">E-mail</string>
    <string name="create_account_senha">Senha</string>
    <string name="create_account_cpf">CPF</string>
    <string name="create_account_aniversario">Aniversário</string>
    <string name="create_account_masculino">Masculino</string>
    <string name="create_account_feminino">Feminino</string>
    <string name="create_account_nome">Nome</string>
    <string name="create_account_entrar">Entrar</string>
     <string name="menu_perfil">Perfil</string>
     <string name="menu_lojas">Lojas</string>
     <string name="menu_amigos">Amigos</string>
    <string name="title_activity_store_profile">StoreProfileActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_fake__header">Fake_Header</string>
   

</resources>
